Add features authentication and authorize

--- a/Clinic/appsettings.json
+++ b/Clinic/appsettings.json
@@ -9,5 +9,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "AppSettings": {
+    "Secret": "PROJECT_FRAMEWORK"
+  },
   "AllowedHosts": "*"
 }
